---------------------------------------------------------------------------------------------------
Version: 4.0.10
Date: ??????
  Bugfixes:
    - Ghost reviver should behave better with pipe underneathies.
---------------------------------------------------------------------------------------------------
Version: 4.0.9
Date: ??????
  Bugfixes:
    - Ghost reviver should behave better with underneathies.
    - Ghost reviver ignores rail-planner placed entities.
---------------------------------------------------------------------------------------------------
Version: 4.0.8
Date: ??????
  Bugfixes:
    - Properly close the quick planner menu.
  Changes:
    - Move held item editor to PickerInventoryTools.
    - Remove deprecated 'picker' interface.
    - Move zapper to PickerInventoryTools.
---------------------------------------------------------------------------------------------------
Version: 4.0.7
Date: ??????
  Bugfixes:
    - Undo testing thing that I thought I already undid.
---------------------------------------------------------------------------------------------------
Version: 4.0.6
Date: ??????
  Changes:
    - More performant on_configuration_changed.
---------------------------------------------------------------------------------------------------
Version: 4.0.5
Date: ??????
  Bugfixes:
    - Fix planner cycle not working.
---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: ??????
  Features:
    - Added selected ghost automatic reviving when holding the place item in your hand.
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: ??????
  Changes:
    - Zapper now uses ALT-Z as the default keybind.
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: ??????
  Bugfixes:
    - Fix rounding error with screenshot camera.