@@ -1,4 +1,5 @@
 [mod-setting-name]
+picker-allow-multiple-craft=Allow multiple pippete crafts
 picker-hide-minimap=Auto Hide Minimap
 picker-player-paste-modifier=Paste Modifier
 picker-search-light=Search Light
@@ -20,6 +21,7 @@ picker-revive-selected-ghosts-entity=Revive selected ghosts
 picker-revive-selected-ghosts-tile=Revive selected tile
 
 [mod-setting-description]
+picker-allow-multiple-craft=Craft Pippete can also craft items in inventory.
 picker-hide-minimap=Auto Hide minimap when selecting logistic chests.
 picker-player-paste-modifier=Additional paste modifier takes recipes paste modifier and multiplies it by this amount.
 picker-search-light=Player flashlight aims toward whatever the player selects.
