@@ -18,6 +18,13 @@ data:extend {
     },
     {
         type = 'bool-setting',
+        name = 'picker-allow-multiple-craft',
+        setting_type = 'runtime-per-user',
+        default_value = false,
+        order = 'picker-b[multiplecraft]-a'
+    },
+    {
+        type = 'bool-setting',
         name = 'picker-search-light',
         setting_type = 'runtime-per-user',
         default_value = true,
