@@ -3,6 +3,9 @@ Version: 4.0.10
 Date: ??????
   Bugfixes:
     - Ghost reviver should behave better with pipe underneathies.
+  Features:
+    - Crafter can craft even if you have items.
+    - Crafter works with cursor ghosts.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.9
 Date: ??????
